Tela material rodante parte 1

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -209,7 +209,7 @@
           "name": "CriarMaterialRodante",
           "pattern": "CriarMaterialRodante",
           "target": [
-            "RoletesSuperiores"            
+            "CriarMaterialRodante"            
           ]
         
 
