--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "webapp/index.html",
   "devDependencies": {
     "@sap-ux/ui5-middleware-fe-mockserver": "2",
-    "@sap/ux-ui5-tooling": "1",
+    "@sap/ux-ui5-tooling": "^1.18.0",
     "@ui5/cli": "^4.0.16"
   },
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "sapuxLayer": "CUSTOMER_BASE",
   "dependencies": {
+    "fiori-tools": "^1.3.0",
     "node": "^20.11.0"
   }
 }
