--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -81,6 +81,12 @@
       "conexaoModel": {
         "type": "sap.ui.model.json.JSONModel"
       },
+     "condicaoOperacaoModel": {
+        "type": "sap.ui.model.json.JSONModel"
+      },
+      "inspecaoModel": {
+        "type": "sap.ui.model.json.JSONModel"
+      },
       "mensagensModel": {
         "type": "sap.ui.model.json.JSONModel"
       },
